# circle-detection

bld/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  circle_detection.sln  circle_detection.vcxproj  circle_detection.vcxproj.filters  cmake_install.cmake
bld/circle_detection.dir/Debug/circle_detection.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bld/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
data/training/: k1.txt  k10.txt  k11.txt  k12.txt  k13.txt  k14.txt  k15.txt  k16.txt  k17.txt  k18.txt  k19.txt  k2.txt  k20.txt  k21.txt  k22.txt  k23.txt  k24.txt  k25.txt  k26.txt  k27.txt  k28.txt  k29.txt  k3.txt  k30.txt  k4.txt  k5.txt  k6.txt  k7.txt  k8.txt  k9.txt
result/: k1.txt  k10.txt  k11.txt  k12.txt  k13.txt  k14.txt  k15.txt  k16.txt  k17.txt  k18.txt  k19.txt  k2.txt  k20.txt  k21.txt  k22.txt  k23.txt  k24.txt  k25.txt  k26.txt  k27.txt  k28.txt  k29.txt  k3.txt  k30.txt  k4.txt  k5.txt  k6.txt  k7.txt  k8.txt  k9.txt
src/: CMakeLists.txt  circle_detection.cpp  circle_taehwa.h
